# demo_mobail_autotest_selene

./: .gitlab-ci.yml  README.md  conftest.py  enviroment_variables.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
api/: __init__.py
mobile/model/pages/: __init__.py  callsPage.py  contactsPage.py  settingsPage.py  systemPage.py  wizardPage.py
tests/: test_calls.py  test_contacts.py  test_settings.py  test_wizard.py
